--- a/src/pages/homepage/homepage.styles.css
+++ b/src/pages/homepage/homepage.styles.css
@@ -19,7 +19,7 @@
 
 #intro-and-social {
     min-height: 560px;
-    height: 100vh;
+    height: 95vh;
     position: relative;
     background-color: rgba(0,0,0,0);
 }
